--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
   "noImplicitReturns": true,
   "noFallthroughCasesInSwitch": true
 },
-  "include": ["src", "vite.config.ts"],
-  "exclude": ["node_modules", "src/app/ui"]
+  "include": ["src"],
+  "exclude": ["node_modules", "src/app/ui", "vite.config.ts"]
 }
