--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
+    "nanoid": "^5.1.5",
     "nodemailer": "^6.9.16",
     "zod": "^3.22.4"
   },
