--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
@@ -24,6 +25,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "google-auth-library": "^10.1.0",
     "http-status": "^1.8.1",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
